<menu
    android:id="@+id/main_menu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_status"
        android:checkable="false"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title="" />

    <item
        android:id="@+id/menu_bluetooth"
        android:orderInCategory="100"
        android:title="@string/menu_bluetooth"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_control"
        android:orderInCategory="101"
        android:title="@string/menu_control"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_alarms"
        android:orderInCategory="102"
        android:title="@string/menu_alarms"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_info"
        android:orderInCategory="103"
        android:title="@string/menu_info"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_monitor"
        android:orderInCategory="103"
        android:title="@string/menu_moonitor"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_network"
        android:orderInCategory="103"
        android:title="@string/menu_network"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_redundancy"
        android:orderInCategory="103"
        android:title="@string/menu_redundancy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_contact_us"
        android:orderInCategory="104"
        android:title="@string/menu_contact_us"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_about_us"
        android:orderInCategory="105"
        android:title="@string/menu_about_us"
        app:showAsAction="ifRoom" />
</menu>
