<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentAboutUs"
    android:id="@+id/fragment_about"
    android:background="@drawable/connecting_world">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/irt_background"
        android:layout_margin="20dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_title"
            android:textColor="@color/about_title"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_body"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_footer"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_margin="10dp" />
    </LinearLayout>

</LinearLayout>
